[gd_scene load_steps=3 format=3 uid="uid://bbr0yec45d55x"]

[ext_resource type="Script" uid="uid://cqhtuge3kq648" path="res://Scenes/main_menu.gd" id="1_28flt"]
[ext_resource type="FontFile" uid="uid://0hn4u6wn6lld" path="res://Fonts/ThaleahFat.ttf" id="2_48xlc"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_28flt")

[node name="CenterContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -148.0
offset_top = -119.0
offset_right = 151.0
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7
alignment = 1

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="CreditsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 32
text = "Credits"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="TitleLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -304.0
offset_top = 59.0
offset_right = 309.0
offset_bottom = 98.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 42
text = "Rainbow High Survivors"
horizontal_alignment = 1
